--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header class="cabecalho">
-      <img class="cabecalho-imagem" src="helpanimal logo.png" alt="logo da Help Animal">
+      <img class="cabecalho-imagem" src="img/Black & White Minimalist Aesthetic Initials Font Logo.png" alt="logo da Help Animal">
       <ul class="cabecalho-lista">
          <li class="cabecalho-lista-item">Adote</li>
          <li class="cabecalho-lista-item">Doaçoes</li>
